# InitRAMfs-init

./: .gitignore  CMakeLists.txt  LICENSE  LegalStuff  Makefile  README  arm-linux.cross  autobuild.sh  git.sh  init.c  linux-aarch.cmake  meson.build  pkg.sh
.cache/clangd/index/: blkid.h.36AF7176BBD1FD9A.idx  fsld.c.113B9C356FA4CF58.idx  fsld.h.F48628B3CD808B88.idx  init.c.1C10AEC76B8C3EEE.idx  libkmod.h.1BD41836101C6984.idx  macros.h.205867266A77157E.idx  mntent.h.12B7C61CDB9C2D98.idx  mods.c.8027E63C4BA947AB.idx  mods.h.B940CDF66B40FC47.idx  sysmnt.c.D6E974401FAD3687.idx  sysmnt.h.67DE3B96D32997BC.idx
helpers/: fsld.c  fsld.h  mods.c  mods.h  sysmnt.c  sysmnt.h
include/blkid/: blkid.h
include/utillinux/: c.h  closestream.h  config.h  switch_root.c  switch_root.h
lib/: libblkid.la  libkmod.la
